kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xenforo
  labels:
    app: xenforo
spec:
  type: ClusterIP
  selector:
    app: xenforo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
